update for integration test